update user info, fix booking model

--- a/views/partials/header/logged.ejs
+++ b/views/partials/header/logged.ejs
@@ -2,7 +2,7 @@
 
 <div class="header-top">
     <p>
-        <a class="btn btn-info" href="/updateinfo">
+        <a class="btn btn-info" href="/user/thong-tin-ca-nhan">
             Xin chào:
             <% if(currentUser){ %>
                 <%= currentUser.user_Name %>
