--- a/views/users/feedback.ejs
+++ b/views/users/feedback.ejs
@@ -22,12 +22,11 @@
                 style="width: 240px">
             <br />
             <br />
-            <input type="email" class="radiusInfo" name='txtUserEmail' placeholder="Email bạn muốn nhận thư phản hồi"
-                style="width: 240px">
+            <input type="email" class="radiusInfo" name='txtUserEmail' value="<%= currentUser.user_Email %>"
+                placeholder="Email bạn muốn nhận thư phản hồi" style="width: 240px">
             <br />
             <br />
-            <input type="test" class="radiusInfo" name='txtUserEmail' placeholder="Thắc mắc của bạn"
-                style="width: 70%; height: 66px">
+            <textarea class="radiusInfo" name='txtUserEmail' placeholder="Thắc mắc của bạn" rows="5"> </textarea>
         </div>
     </div>
     <div style="text-align: right; padding-right: 20%; margin-top: 20px ">
