--- a/public/css/user/infoUser.css
+++ b/public/css/user/infoUser.css
@@ -50,7 +50,7 @@ h1 {
 
 .profile-usertitle-name {
     color: #5a7391;
-    font-size: 16px;
+    font-size: 23px;
     font-weight: 600;
     margin-bottom: 7px;
 }
@@ -171,6 +171,7 @@ a:link {
 .title-info {
     height: 26px;
     font-weight: bold;
+    margin-bottom:15px;
 }
 
 .btnuser0 {
