--- a/views/users/general.ejs
+++ b/views/users/general.ejs
@@ -1,9 +1,9 @@
 <div class="content-area">
     <div class="row">
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4">
-            <div class="title-info">Số điện thoại : </div>
+            <div class="title-info">Email / Tên tài khoản : </div>
             <br />
-            <div class="title-info">Email : </div>
+            <div class="title-info">Số điện thoại : </div>
             <br />
             <div class="title-info">Mật khẩu : </div>
             <br />
@@ -11,24 +11,24 @@
             <br />
             <div class="title-info">Tổng tiền bạn đã đặt vé : </div>
         </div>
-        <form action="/updateInfo/numberphone" method="POST">
+        <form>
             <div class="col-xl-5 col-lg-5 col-md-5 col-sm-5 col-5">
-                <input type="text" class="radiusInfo" name='txtUserNumberPhone'
-                    placeholder="<%= user.dataValues.user_NumberPhone %>">
+                <input type="email" class="radiusInfo" name='txtUserEmail' placeholder="<%= currentUser.user_Email %>"
+                    disabled>
                 <br />
                 <br />
             </div>
             <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3">
-                <button type="submit" class="btnuser">Cập nhật</button>
+                <!-- <button  class="btnuser">Cập nhật</button> -->
                 <br />
                 <br />
             </div>
         </form>
 
-        <form action="/updateInfo/email" method="POST">
+        <form action="/user/thong-tin-ca-nhan/cap-nhat/so-dien-thoai" method="POST">
             <div class="col-xl-5 col-lg-5 col-md-5 col-sm-5 col-5">
-                <input type="email" class="radiusInfo" name='txtUserEmail'
-                    placeholder="<%= user.dataValues.user_Email %>">
+                <input type="text" class="radiusInfo" name='userPhoneNumber'
+                    placeholder="<%= currentUser.user_NumberPhone %>">
                 <br />
                 <br />
             </div>
@@ -50,9 +50,9 @@
             <br />
         </div>
 
-        <form action="/updateInfo/address" method="POST">
+        <form action="/user/thong-tin-ca-nhan/cap-nhat/dia-chi" method="POST">
             <div class="col-xl-5 col-lg-5 col-md-5 col-sm-5 col-5">
-                <input type='text' class="radiusInfo" name="txtUserAddress" placeholder="<%= user.dataValues.user_Address %>">
+                <input type='text' class="radiusInfo" name="userAddress" placeholder="<%= currentUser.user_Address %>">
                 <br />
                 <br />
             </div>
@@ -63,21 +63,17 @@
             </div>
         </form>
 
-
         <div class="col-xl-5 col-lg-5 col-md-5 col-sm-5 col-5">
-            <p class="totalMoney" id="totalMoney_all" value="<%= totalMoney %>">&nbsp;₫</p>
-            <br />
-            <br />
+            <input type='text' class="radiusInfo" placeholder="<%= totalMoneyOfUser %>&nbsp;₫" disabled>
+
         </div>
         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3">
             <button id="xem_chi_tiet" type="submit" class="btnuser">Xem chi tiết</button>
-            <br />
-            <br />
         </div>
-    
-        
+
+
         <!--Password lần 2-->
-        <form action="/updateInfo/password" method="POST">
+        <form action="/user/thong-tin-ca-nhan/cap-nhat/mat-khau" method="POST">
             <div id="myModal1" class="modal">
                 <div class="modal-content">
                     <div class="row" style="text-align: center">
@@ -90,7 +86,7 @@
                     </div>
                     <div class="row">
                         <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9 col-9">
-                            <input id="input_pass2" type='password' name="txtUserPassword"
+                            <input id="input_pass2" type='password' name="userPassword"
                                 placeholder="Nhập mật khẩu của bạn vào đây" style="width: 60%">
                         </div>
                         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3">
@@ -105,7 +101,7 @@
         <div id="table_xem_chi_tiet" class="modal2">
             <div class="title">
                 <div class="top_title">Lịch sử đặt vé </div>
-                <div class="exit_xem_chi_tiet cancelbtn">Thoát</div>
+                <div class="exit_xem_chi_tiet cancelbtn" style="cursor:pointer">Thoát</div>
                 <div class="table_top" style="margin-bottom: 0">
                     <table>
                         <tr>
@@ -114,38 +110,49 @@
                             <th style="width: 10%">Ảnh phim </th>
                             <th style="width: 10%">Ngày chiếu</th>
                             <th style="width: 21%">Cụm rạp / Rạp</th>
-                            <th style="width: 15%">Xuất chiếu</th>
+                            <th style="width: 15%">Suất chiếu</th>
                             <th style="width: 8%">Ghế</th>
-                            <th style="width: 8%">Tiền vé</th>
+                            <th style="width: 8%">Tổng tiền</th>
                         </tr>
                     </table>
                 </div>
             </div>
             <div class="table">
                 <table>
-                    <% for (var i = 0; i < all_ve.length; i++ ) { %>
-                    <tr>
-                        <td style="width: 3%"><%= i+1 %></td>
-                        <td style="width: 25%">
-                            <%= all_ve[i].dataValues.CinemaTimeShow.Film.film_Name  %>
-                        </td>
-                        <td style="width: 10%">
-                            <img src="<%= all_ve[i].dataValues.CinemaTimeShow.Film.film_Image %>">
-                        </td>
-                        <td style="width: 10%">
-                            <% var d = new Date(all_ve[i].dataValues.CinemaTimeShow.cinemaTimeShow_Date); %>
-                            <%= d.getDate(); %>
-                            /
-                            <%= d.getMonth()+1; %>
-                            /
-                            <%= d.getFullYear(); %>
-                        </td>
-                        <td style="width: 21%"> <%= all_ve[i].dataValues.CinemaTimeShow.Cinema.Cineplex.cineplex_Name %> / <%= all_ve[i].dataValues.CinemaTimeShow.Cinema.cinema_Name %></td>
-                        <td style="width: 15%"> <%= all_ve[i].dataValues.CinemaTimeShow.TimeShow.timeShow_Start %> - <%= all_ve[i].dataValues.CinemaTimeShow.TimeShow.timeShow_End %></td>
-                        <td style="width: 8%"> <%= all_ve[i].dataValues.ticket_Chair %> </td>
-                        <td style="width: 8%" id="money_ve" class="moneyve" value="<%= all_ve[i].dataValues.ticket_TotalMoney %>">&nbsp;₫</td>
-                    </tr>
-                    <% } %>
+                    <% for (var i=0; i < allBookings.length; i++ ) { %>
+                        <tr>
+                            <td style="width: 3%">
+                                <%= i+1 %>
+                            </td>
+                            <td style="width: 25%">
+                                <%= allBookings[i].Showtime.Film.film_Name %>
+                            </td>
+                            <td style="width: 10%">
+                                <img src="<%= allBookings[i].Showtime.Film.film_Image %>">
+                            </td>
+                            <td style="width: 10%">
+                                <% var d=new Date(allBookings[i].Showtime.showtime_Date); %>
+                                    <%= d.getDate(); %>
+                                        /
+                                        <%= d.getMonth()+1; %>
+                                            /
+                                            <%= d.getFullYear(); %>
+                            </td>
+                            <td style="width: 21%">
+                                <%= allBookings[i].Showtime.Cinema.Cineplex.cineplex_Name %> / <%=
+                                        allBookings[i].Showtime.Cinema.cinema_Name %>
+                            </td>
+                            <td style="width: 15%">
+                                <%= allBookings[i].Showtime.showtime_Begin %>
+                            </td>
+                            <td style="width: 8%">
+                                <%= allBookings[i].booking_Seat %>
+                            </td>
+                            <td style="width: 8%" id="money_ve" class="moneyve"
+                                value="<%= allBookings[i].booking_TotalPrice %>">
+                                &nbsp;₫</td>
+                        </tr>
+                        <% } %>
                 </table>
             </div>
         </div>
@@ -191,7 +198,7 @@
             }
         }
 
-        $j('.content-area .totalMoney').html(formatCurrency($j("#totalMoney_all").attr('value'),{ "pattern": "%s\u00a0\u20ab", "precision": 0, "requiredPrecision": 0, "decimalSymbol": ",", "groupSymbol": ".", "groupLength": 3, "integerRequired": 1 }));
-        $j('.content-area .moneyve').html(formatCurrency($j("#money_ve").attr('value'),{ "pattern": "%s\u00a0\u20ab", "precision": 0, "requiredPrecision": 0, "decimalSymbol": ",", "groupSymbol": ".", "groupLength": 3, "integerRequired": 1 }));
+        $j('.content-area .totalMoney').html(formatCurrency($j("#totalMoney_all").attr('value'), { "pattern": "%s\u00a0\u20ab", "precision": 0, "requiredPrecision": 0, "decimalSymbol": ",", "groupSymbol": ".", "groupLength": 3, "integerRequired": 1 }));
+        $j('.content-area .moneyve').html(formatCurrency($j("#money_ve").attr('value'), { "pattern": "%s\u00a0\u20ab", "precision": 0, "requiredPrecision": 0, "decimalSymbol": ",", "groupSymbol": ".", "groupLength": 3, "integerRequired": 1 }));
     </script>
 </div>
