--- a/views/content/film/upcomingFilms.ejs
+++ b/views/content/film/upcomingFilms.ejs
@@ -6,6 +6,8 @@
                     <img id="img-film-indexContent" src="<%= upcomingFilms[i].film_Image %>" alt="Không load được ảnh"
                         width="216" height="324">
                 </a>
+                <div class="movie-technology">
+                </div>
             </div>
 
             <a href="/phim/<%= upcomingFilms[i].film_ID %>">
