--- a/views/content/showFilms.ejs
+++ b/views/content/showFilms.ejs
@@ -2,7 +2,7 @@
     URL: /, /phim
 -->
 
-<h2 style="text-align:center;margin-top: 30px;">DANH SÁCH PHIM</h2>
+<h2 style="text-align:center;margin-top: 45px; font-weight:600;">DANH SÁCH PHIM</h2>
 <div class="content-area">
     <div class="tab-movies">
         <div class="tab-movies-line">
