--- a/views/partials/slide_header.ejs
+++ b/views/partials/slide_header.ejs
@@ -14,50 +14,43 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
         <div class="item active">
-            <img src="../public/image/slide_header/latmat-2.jpg" alt="Không load được ảnh">
-            <div class="carousel-caption">
-                ...
-            </div>
-        </div>
-        <div class="item">
-            <img src="../public/image/slide_header/slide-header-godzilla-de-vuong-bat-tu.jpg" alt="Không load được ảnh">
-            <div class="carousel-caption">
-                ...
-            </div>
-        </div>
-        <div class="item">
-            <img src="../public/image/slide_header/slide-header-vo-gian-dao.jpg" alt="Không load được ảnh">
-            <div class="carousel-caption">
-                ...
-            </div>
-        </div>
-        <div class="item">
             <img src="../public/image/slide_header/banner-bo-gia-final-2.jpg" alt="Không load được ảnh">
             <div class="carousel-caption">
                 ...
             </div>
         </div>
-        <div class="item">
-            <img src="../public/image/slide_header/slide-header-vo-gian-dao.jpg" alt="Không load được ảnh">
+        <div class="item img-center">
+            <img class="img-center" src="../public/image/slide_header/xem_phim_web_980x448.jpg" alt="Không load được ảnh">
             <div class="carousel-caption">
                 ...
             </div>
         </div>
         <div class="item">
-            <img src="../public/image/slide_header/slide-header-x-men-phuong-hoang-bong-toi.jpg"
-                alt="Không load được ảnh">
+            <img class="img-center" src="../public/image/slide_header/cgv-tarot-series-2-980x448.jpg" alt="Không load được ảnh">
             <div class="carousel-caption">
                 ...
             </div>
         </div>
         <div class="item">
-            <img src="../public/image/slide_header/slide-header-khuyen-mai-1.jpg" alt="Không load được ảnh">
+            <img class="img-center" src="../public/image/slide_header/cgv-digital-team-diy-980x448.jpg" alt="Không load được ảnh">
             <div class="carousel-caption">
                 ...
             </div>
         </div>
         <div class="item">
-            <img src="../public/image/slide_header/slide-header-khuyen-mai-2.jpg" alt="Không load được ảnh">
+            <img class="img-center" src="../public/image/slide_header/du_an_phim_ngan_cj.jpg" alt="Không load được ảnh">
+            <div class="carousel-caption">
+                ...
+            </div>
+        </div>
+        <div class="item">
+            <img class="img-center" src="../public/image/slide_header/980x448_1__10.jpg" alt="Không load được ảnh">
+            <div class="carousel-caption">
+                ...
+            </div>
+        </div>
+        <div class="item">
+            <img class="img-center" src="../public/image/slide_header/cgv-production-team-midnite-streetfood-980x448_3.jpg" alt="Không load được ảnh">
             <div class="carousel-caption">
                 ...
             </div>
